<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"    >

    <item
        android:id="@+id/menu_timetable"
        app:showAsAction="never"
        android:title="@string/TimeTableMenu">
        <menu>
            <item android:id="@+id/submenu_firstyear"
                android:title="@string/FirstYearSubMenu" />
            <item android:id="@+id/submenu_secondyear"
                android:title="@string/SecondYearSubMenu" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_academiccalendar"
        app:showAsAction="never"
        android:title="@string/AcademicCalendarMenu">
    </item>

    <item
        android:id="@+id/menu_suggestion"
        app:showAsAction="never"
        android:title="@string/SuggestionsMenu">
    </item>

    <item
        android:id="@+id/menu_about"
        app:showAsAction="never"
        android:title="@string/AboutMenu">
    </item>



</menu>